# basic-api

./: .gitignore  Cargo.toml
src/: api_routes.rs  main.rs  spotify_api.rs  users.rs
src/front_end/: callback.html  index.html  open.html
