[package]
name = "basic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.59"
poem-openapi = { version = "3.0.6", features = ["swagger-ui"] }
rspotify = {version = "0.12.0", features = ["env-file", "cli"]}
serde = "1.0.194"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
